<resources>
    <string name="app_name">Automater</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_trigger">TRIGGERS</string>
    <string name="lbl_action">ACTIONS</string>
    <string name="lbl_constrains">CONSTRAINTS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="trigger_labels">
        <item>Battery/power</item>
        <item>Call/SMS</item>
        <item>Connectivity</item>
        <item>Date/Time</item>
        <item>Device Events</item>
        <item>Location</item>
        <item>AppsMount/Specific</item>
    </string-array>
    <string-array name="trigger_images">
        <item>ic_battery</item>
        <item>ic_call</item>
        <item>ic_conectivity</item>
        <item>ic_date</item>
        <item>ic_events</item>
        <item>ic_location</item>
        <item>ic_battery</item>
    </string-array>
    <string-array name="action_labels">


    </string-array>
    <string name="createnew_fragment_data">
        Battery/power,Call/SMS,Connectivity,Date/Time,Device Events,Location,AppsMount/Specific
    </string>
    <string name="createnew_frgment_img">
        ic_battery,
        ic_call,
        ic_conectivity,
        ic_date,
        ic_events,
        ic_location,
        ic_battery
    </string>
    <string name="action_fragment_data">
        Applications,Camera/Photo,Connectivity,Date/Time,Device Actions,Device Settings,Location,Media,Messaging,Phone,Screen,Volume
    </string>
    <string name="action_fragment_img">ic_application,ic_camera,ic_connectivity2,ic_date2,ic_device,ic_settng2,ic_location2,ic_media,ic_message,ic_phone,ic_screen,ic_volume2
    </string>
    <string name="constraint_fragment_data">
        Battery/Power,Connectivity,Date/Time,Device State,Media,Phone,Screen and Speaker,Sensors
    </string>
    <string name="constraint_fragment_img">
        ic_battery,
        ic_connectivity2,
        ic_date,
        device_state,
        ic_media,
        ic_phone,
        ic_speaker,
        ic_sensor
    </string>
    <string name="trigger_icon_img"> bt_poewr,call_sms,connectivity,date_time,device_events,location,location
    </string>
    <string name="beterry_data">
        Battery level,
        Battery Saver State,
        wifi state change,
        Power Connected/Disconnected
    </string>
    <string name="bettry_img">
     battery_level,
     battery_saver_state,
     wifi_state_changee,
     power_connected_disconnected

</string>
    <string name="call_sma_data">
        Call Active,
        Call Ended,
        Call Incoming,
        Call Missed,
        Call Outgoing,
        Dial Phone Number,
        SMS  Received,
        SMS Sent
    </string>
    <string name="call_sms_img">
        call_active,
        call_ended,
        call_incoming,
        call_missed,
        call_outgoing,
        dial_phone_number,
        sms_received,
        sms_sent
    </string>
    <string name="connectivity_data">
        Bluetooth event,
        Data connectivity change,
        Headphones Insert/Remove,
        wifi state change
    </string>
    <string name="connectivity_img">
        bluetooth_event,
        dataconnectivity_change,
        headphones_insert_remove,
        wifi_state_changee,
    </string>
    <string name="date_time_data">
        Calender Event,
        Day of Week/Month,
        Day/Time Trigger,
        Regular Interval,
        Stopwatch
    </string>
    <string name="date_time_img">
        calendar_event,
        day_of_week_mmonth,
        day_time_trigger,
        regular_interval,
        stopwatch
    </string>
    <string name="device_event_data">
        Auto rotate changed,
        Auto sync changed,
        Device boot,
        GPS Enabled/Disabled,
        Failed login attempt,
        Music/Sound playing,
        Notification,
        Screen Unlocked,
        Screen on/off
    </string>
    <string name="device_event_img">
        auto_rotate_changed,
        auto_sync_changed,
        device_boot,
        gps_enabled_disabled,
        failed_login_attempt,
        music_sound_playing,
        notification,
        screen_unlocked,
        screen_on_off,
    </string>
    <string name="location_data">
        Location triggers
    </string>
    <string name="location_img">
          location_trigger
    </string>
    <string name="action_icon_img">
        application_icon,camera_icon,connectivity_iconn,date_time_icon,device_actions,device_settings_icon,location_icon,media_iconn,messaging_iconn,phone_iconn,screen_iconn,volume_iconn
    </string>
    <string name="action_application_data">
        App Enable/Disable,
        clear App Data,
        Kill Application,
        Kill Application Process,
        Launch Application,
        Launch Shortcut,
        Locate/Tasker plugin,
        Open Website/HTTP GET,
        Shell Script

    </string>
    <string name="action_application_img">
        app_enable_disable,
        clear_app_data,
        kill_application,
        kill_application_process,
        launch_application,
        launch_shortcut,
        locale_tasker_plugin,
        open_website_http_get,
        shell_script
    </string>
    <string name="action_camera_photo_data">
        Share Last Photo,
        Take Picture,
        Take Screenshoot
   </string>
    <string name="action_camera_photo_img">
        share_last_photo,
        take_picture,
        take_screenshot
    </string>
    <string name="action_connectivity_data">
        Airplane mode on/off,
        Auto sync on/off,
        Bluetooth,
        Mobile data on/off
    </string>
    <string name="action_connectivity_img">
        airplane_mode_onoff,
        auto_sync_onoff,
        bluetooth,
        mobile_data_onoff
    </string>
    <string name="action_date_time_data">
        Alarm Clock,
        Say Current Time,
        Stopwatch
    </string>
    <string name="action_datetime_img">
        alarm_lock,
        say_current_time,
        stopwatch
    </string>
    <string name="action_device_action_data">
        Launch home screen,
        Press back button,
        Reboot/Power off,
        Speak text,
        Vibrate
    </string>
    <string name="action_device_action_img">
        launch_home_screen,
        press_back_button,
        reboot_power_off,
        speak_text,
        vibrate
    </string>
    <string name="action_device_setting_data">
        Auto rotate on/off,
        Battery saver
  </string>
    <string name="action_device_setting_img">
        auto_rotate_onoff,
        battery_saver
    </string>
    <string name="action_location_data">
        Force Location Update,
        GPS Enable/Disable,
        Location Mode,
        Set Location Upadte Rate,
        Share Location
    </string>
    <string name="action_location_img">
        force_locationupdate,
        gps_enable_disable,
        location_mode,
        set_location_update_rate,
        share_location
    </string>
    <string name="action_media_data">
        Control Media,
        Play/Stop Sound,
        Record Microphone
    </string>
    <string name="action_media_img">
        control_media,
        play_stop_sound,
        record_microphone
    </string>
    <string name="action_messaging_data">
        Send Email,
        Send SMS,
        Tweet,
        UDP Command
    </string>
    <string name="action_messanging_img">
        send_email,
        send_sms,
        tweet,
       upd_command

    </string>
    <string name="action_phone_data">
        Answer Call,
        Call Rejet,
        Clear Call Log,
        Make Call,
        Open Call Log,
        Ringtone Configure
      </string>
    <string name="action_phone_img">
        answer_call,
        call_reject,
       clear_call_log,
        make_call,
        open_call_log,
        ringer_volume
    </string>
    <string name="action_screen_data">
        Brightness,
        Dim Screen,
        Force Screen Rotation,
        Keep Device Awake,
        Screen On/Off,
        Set Screen Timeout
      </string>
    <string name="action_screen_img">
        brightness,
        dim_screen,
        force_screen_rotation,
        keep_device_awake,
        screen_on_off,
        set_screen_timeout
      </string>
    <string name="action_volume_data">
        priority Mode/Do Not Disturb,
        Speakerphone On/Off,
        Vibrate Enable/Disable,
        Volume Change,
        Volume Up/Down
      </string>
    <string name="action_voume_img">
        priority_modedo_not_disturb,
        speakerphone_onoff,
        vibrate_enable_disable,
        volume_change,
        volume_updown
      </string>
    <string name="constraint_icon_img">
battery_icon,connectivity_icon,date_icon,state_icon,media_icon,phone_icon,speaker_icon,sensor_icon

    </string>
    <string name="constraint_bettery">
        Battery level,
        Battery Saver State,
        Power Connected
    </string>
    <string name="constraint_bettrey_img">
        battery_level,
        battery_saver_state,
        power_connected
    </string>
    <string name="constraint_connectivity_data">
        Bluetooth State,
        GPS state,
        Location mode,
        Wifi state,
        Mobile data on/off
    </string>
    <string name="constraint_connectivity_img">
        bluetooth_state,
        gps_state,
        location_mode,
        wifi_state,
        mobile_data_onoff
    </string>
    <string name="constraint_date_time_data">
       Calender Entry,
        Day of the Month,
        Day of the Week,
        Month of the Year,
        Stopwatch,
        Device State
    </string>
    <string name="constraint_date_time_img">
       calender_entry,
        day_of_the_month,
        day_of_the_week,
        month_of_the_year,
        stopwatch,
        device_state
    </string>
    <string name="constraint_device_state_data">
        Airplane mode,
        Application running,
        Auto rotate,
        Auto sync,
        Deviced locked/unlocked,
        Auto sync,
        Time since boot
    </string>
    <string name="constraint_device_state_img">
        airplane_mode,
        application_running,
        auto_rotate,
        auto_sync,
        device_locked_unlocked,
        auto_sync,
        light_sensor
    </string>
    <string name="constraint_media_data">
        Headphone Connection,
        Music Active,
    </string>
    <string name="constraint_media_img">
        headphone_connection,
        music_active

        </string>
    <string name="constraint_phone_data">
        Call State,
        Phone Ringing
    </string>
    <string name="constraint_phone_img">
        call_state,
        phone_ringing
    </string>
    <string name="constraint_screen_sensor_data">
        Brightness,
        Ringing Volume,
        Screen on/off,
        Speakerphone on/off,
        Volume level
        </string>
    <string name="constraint_screen_sensor_img">
        brightness,
        ringer_volume,
        screen_onoff,
        speakerphone_onoff,
        volume_level
    </string>
    <string name="constraint_sensors_data">
       Device Facing,
        Device Orientation,
        Light Sensor,
        Proximity Sensor,
        </string>
    <string name="text_one">When Battery level is incresed</string>
    <string name="text_two">Do</string>
    <string name="text_three">Vibrate</string>
    <string name="text_four">Only when</string>
    <string name="text_five">When battery level is above 57%</string>
</resources>