<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.Previous_trigger_Activity">


    <!--Toolbar-->
    <LinearLayout
        android:id="@+id/toolbarr"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/red">

        <ImageView
            android:id="@+id/arraw"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/arrow"
            tools:ignore="ContentDescription" />

        <com.smileparser.automator.utils.SecondaryTextView
            android:id="@+id/txtPrevTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Create New"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp">

            <com.smileparser.automator.utils.SecondaryTextView

                android:id="@+id/tv_one_red"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/red_bg_trigger"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/_10sdp"
                android:text="@string/text_one"
                android:textColor="@color/red" />

            <com.smileparser.automator.utils.SecondaryTextView

                android:id="@+id/tv_two"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@id/tv_one_red"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/_10sdp"
                android:text="@string/text_two"
                android:textColor="@color/black" />

            <com.smileparser.automator.utils.SecondaryTextView
                android:id="@+id/tv_blue_three"

                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@id/tv_two"
                android:background="@drawable/blue_bg_trigger"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/_10sdp"
                android:text="@string/text_three"
                android:textColor="@color/blue" />

            <com.smileparser.automator.utils.SecondaryTextView

                android:id="@+id/tv_four"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@id/tv_blue_three"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/_10sdp"
                android:text="@string/text_four"

                android:textColor="@color/black" />

            <com.smileparser.automator.utils.SecondaryTextView
                android:id="@+id/tv_five_green"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@id/tv_four"
                android:background="@drawable/green_bg_trigger"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/_10sdp"
                android:text="@string/text_five"
                android:textColor="@color/green" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_resume_edit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/resume_editing" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/save_btn" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>




